--- a/package.json
+++ b/package.json
@@ -22,11 +22,10 @@
         "redux-thunk": "^2.3.0"
     },
     "scripts": {
-        "start-client": "react-scripts start",
-        "build": "react-scripts build && (cd server && yarn install)",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "start": "cd server && yarn start"
+        "dev-server": "webpack-dev-server --open",
+        "start": "node server.js",
+        "build": "webpack -p",
+        "heroku-postbuild": "npm run build"
     },
     "eslintConfig": {
         "extends": "react-app"
