--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
         "redux-thunk": "^2.3.0"
     },
     "scripts": {
-        "dev-server": "webpack-dev-server --open",
-        "start": "node server.js",
-        "build": "webpack -p",
-        "heroku-postbuild": "npm run build"
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "postinstall": "react-scripts build"
     },
     "eslintConfig": {
         "extends": "react-app"
