--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
         "redux-thunk": "^2.3.0"
     },
     "scripts": {
-        "start": "npm run run:css && react-scripts start",
-        "run:css": "npx tailwind build tailwind.css -o vendor.css"
+        "dev": "react-scripts start",
+        "start": "serve -s build",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject",
+        "heroku-postbuild": "npm run build"
     },
     "eslintConfig": {
         "extends": "react-app"
