--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
         "redux-thunk": "^2.3.0"
     },
     "scripts": {
+        "dev": "react-scripts start",
         "start": "node server.js",
         "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject",
+        "heroku-postbuild": "npm run build"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -46,7 +48,7 @@
         "redux-devtools-extension": "^2.13.8"
     },
     "engines": {
-        "node": "12.18.1",
+        "node": "v12.18.1",
         "npm": "6.14.5"
     }
 
