--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
         "axios": "^0.19.2",
         "bootstrap": "^4.5.2",
         "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "express-favicon": "^2.0.1",
         "files": "^2.1.0",
         "jquery": "^3.5.1",
+        "path": "^0.12.7",
         "popper.js": "^1.16.1",
         "react": "^16.13.1",
         "react-bootstrap": "^1.3.0",
@@ -51,5 +54,4 @@
         "node": "v12.18.1",
         "npm": "6.14.5"
     }
-
 }
